refactor: Use BufferDiffPanel's isDarkTheme() instead of getTheme().isDarkTheme()